# zero2prod-book

./: .env  Cargo.toml  Dockerfile
.github/workflows/: general.yml  rust.yml
.sqlx/: query-45775f32e95e521b727ff35cf7b1b1e6bc7f49545a6a421b467bf51931c7adea.json
migrations/: 20250109103522_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
